# spark-connect-proxy

./: .gitignore  Cargo.toml  build.sbt  test.py
plugin/src/main/scala/com/github/kimahriman/: SparkConnectProxyInterceptor.scala
plugin/src/main/scala/org/apache/spark/sql/connect/proxy/: Config.scala  SparkConnectProxyInterceptor.scala  SparkConnectProxyListener.scala
src/: auth.rs  config.rs  launcher.rs  main.rs  routes.rs  store.rs
